<size=20><b>Version 2.5.1</b></size>
- FramingTransposer does its work after Aim, so it plays better with Aim components.
- Framing Transposer: add Damped Rotations option.  If unchecked, changes to the vcam's rotation will bypass Damping, and only target motion will be damped.
- Orbital Transposer / FreeLook: improved damping when target is moving
- Add Convert to TargetGroup option on LookAt and Follow target fields
- Bugfix (1214301, 1213836) - disallow structural change when editing vcam prefabs
- Bugfix (1213471, 1213434): add null check in editor
- Bugfix (1213488): no solo for prefab vcams
- Bugfix (1213819): repaintGameView on editor change
- Fixed first frame jitter when blending cameras that use HDRP Depth of Field volumes. In the first frame, we ignored the target blend, because its weight was less than epsilon. We no longer do that, because it caused a jitter in the first frame of the blend in two cases: (1) The default DoF values in HDRP were extremely large, so even with minimal weight they caused a noticeable jitter, or (2) The default DoF settings in HDRP used a different focus mode than the blending camera; focus mode is not a lerpable property


<size=20><b>Version 2.5.0</b></size>
- Accommodate simultaneous precesnce of HDRP and URP
- Regression fix: Axis was always recentered in Edit mode, even if recentering is off


<size=20><b>Version 2.4.0</b></size>

- Storyboard: added global mute function
- New vcams are by default created matching the scene view camera
- Added ApplyBeforeBody option to POV component, to support working with FramingTransposer
- Added RectenterTarget to POV component
- Added OnTransitionFromCamera callback to extensions
- Added Damping to SameAsFollowTarget and HardLockToTarget components
- URP 7.1.3: added CinemachinePixelPerfect extension
- Added Speed Mode to AxisState, to support direct axis control without max speed